--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -11,6 +11,7 @@
         <div class="header__inner">
             <nav class="header__nav nav">
                 <a href="{{ url_for('home.home') }}" class="nav__item">Home</a>
+                <a href="{{ url_for('factory.factory') }}" class="nav__item">Factory</a>
             </nav>
         </div>
     </header>
